tests/errors/pat_or_name_conflict_err/pat_or_name_conflict_err.c
#error pat_or_name_conflict_err.pat_or_name_conflict_err:5:10 Variable name conflicts
#error pat_or_name_conflict_err.pat_or_name_conflict_err:8:10 Variable name conflicts
#error pat_or_name_conflict_err.pat_or_name_conflict_err:10:10 Variable name conflicts
